building card project with css grid

--- a/cards.html
+++ b/cards.html
@@ -96,7 +96,7 @@
             <h3>card title</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. A aliquam
-              ut asperiores minus, illum delectus.
+              ut asperiores minus, illum delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quod perferendis nihil repellat veritatis, nulla debitis ratione rem tempora saepe.
             </p>
           </div>
           <!-- card footer -->
