building Layout Project Version I

--- a/layout.html
+++ b/layout.html
@@ -20,8 +20,46 @@
     <title>Layout Project</title>
   </head>
   <body>
+    <main class="main">
+      <!-- header -->
+      <header class="header"><h2>grid makes layout easy</h2></header>
+      <!-- navbar -->
 
-
+      <nav class="navbar">
+        <ul>
+          <li>
+            <a href="hero.html">hero</a>
+          </li>
+          <li>
+            <a href="cards.html">cards</a>
+          </li>
+          <li>
+            <a href="tiles.html">tiles</a>
+          </li>
+          <li>
+            <a href="layout.html">layout</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- content -->
+      <section class="content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quaerat quo nulla reprehenderit iusto repellat maxime explicabo soluta, molestias quos sunt aliquam voluptate quisquam quod voluptatibus quibusdam impedit facere. Debitis fuga molestiae eaque! Nulla, atque a quae animi facilis mollitia numquam quia? Doloremque esse vitae facilis, quibusdam soluta quo, aut magni illo quas assumenda exercitationem sapiente veritatis quia repudiandae reprehenderit nobis suscipit dicta harum ratione repellat illum? Sunt reprehenderit ut repellat cupiditate, sequi deleniti dolore.
+         
+        </p>
+      </section>
+      <!-- sidebar -->
+      <section class="sidebar">
+        <span><i class="fab fa-twitter"></i></span>
+        <span><i class="fab fa-facebook"></i></span>
+        <span><i class="fab fa-squarespace"></i></span>
+        <span><i class="fab fa-linkedin"></i></span>
+      </section>
+      <!-- footer -->
+      <div class="footer">
+        <p>copyright &copy; all right are reserved</p>
+      </div>
+    </main>
     <a href="index.html" class="btn">back to home</a>
   </body>
 </html>
